2006-04-12  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::load_ascii): Pass loop counter, not
	count, to read_ascii.
	* ov-list.cc (octave_list::load_ascii): Likewise.

	* ov-list.cc (octave_list::do_index_op): Allow index to extract
	multiple items.  Result is always a list.

	* ov-struct.cc (struct_levels_to_print): Move here from ov.cc.
	(Vstruct-levels_to_print): Likewise.  Now static.
	(symbols_of_ov_struct): New function.  Move DEFVAR for
	struct_levels_to_print here from symbols_of_ov in ov.cc.

	* ov.h (Vstruct-levels_to_print): Delete decl.

	* gripes.cc (warn_divide_by_zero): Move here from ov.cc.
	(Vwarn_divide_by_zero): Likewise.  Now static.
	(symbols_of_gripes): New function.  Move DEFVAR for
	warn_divide_by_zero here from symbols_of_ov in ov.cc.
	* ov.h (Vwarn_divide_by_zero): Delete decl.

	* load-save.cc (do_load): Declare count octave_idx_type, not int.
	* ls-oct-ascii.cc, ls-oct-ascii.h (read_ascii_data): Likewise.

2006-04-11  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (tree_simple_assignment::rvalue,
	tree_multi_assignment::rvalue):
	Error if RHS is a comma-separated list.

2006-04-07  John W. Eaton  <jwe@octave.org>

	* defaults.cc (FOCTAVE_VERSION): New function to replace
	corresponding DEFCONSTX macro in symbols_of_defaults.

	* file-io.cc (FP_tmpdir, FSEEK_SET, FSEEK_CUR, FSEEK_END, Fstdin,
	Fstdout, Fstderr): New functions to replace DEFCONSTX macros in
	symbols_of_file_io.
	(const_value): New static function.
	(symbols_of_file_io): Delete.

	* syscalls.cc (FF_DUPFD, FF_GETFD, FF_GETFL, FF_SETFD, FF_SETFL,
	FO_APPEND, FO_ASYNC, FO_CREAT, FO_EXCL, FO_NONBLOCK, FO_RDONLY,
	FO_RDWR, FO_SYNC, FO_TRUNC, FO_WRONLY, FWNOHANG, FWUNTRACED,
	FWCONTINUE): New functions to replace DEFCONSTX macros in
	symbols_of_syscalls.
	(const_value): New static function.
	(symbols_of_syscalls): Delete.

	* pr-output.cc (pr_max_internal, pr_min_internal):
	Return 0 if all values are Inf or NaN.